--- a/src/css/game.sass
+++ b/src/css/game.sass
@@ -1,6 +1,6 @@
 @font-face
   font-family: 'Lato'
-  src: url('../fonts/Lato-Hairline.woff2')
+  src: url('/../fonts/Lato-Hairline.woff2')
   font-style: normal
 
 body
